fix layout alignment using bootstrap
originally the blocks in the landing section were aligned using css but now i have passed the responsibility over to bootstrap

--- a/css/layout/block.css
+++ b/css/layout/block.css
@@ -74,9 +74,5 @@
         right: 2em;
         bottom: 2em;
     }
-
-    .block {
-        height: 250px;
-    }
 }
 /* END Medium & Large Devices */
